deploy: 225811b9612a523ee06510599c8699d845f2de04

--- a/README.html
+++ b/README.html
@@ -20,7 +20,7 @@
     <meta name='generator' content='Emanote' />
 
   
-  <link href='tailwind.css?instanceId=c01645a6-1921-49f5-82b5-2df63b0671f1' rel='stylesheet' type='text/css' />
+  <link href='tailwind.css?instanceId=298cd620-85e3-4f9d-b8a6-d380a4eef8fb' rel='stylesheet' type='text/css' />
 
   <!-- Heist error element -->
   <style type='text/css'>
@@ -205,7 +205,7 @@
     </p>
   
     <p class='mb-3'>
-      Baljeet will be sharing his views in this space
+      This is built using emanote which is a good way to publish static sites with backlinking feature.
     </p>
   
   <!-- What goes in this file will appear below the note body-->
